# cmake-init-gif-engine

./: .clang-format  .clang-tidy  .codespellrc  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  README_8md.html  about.html  about_8dox.html  annotated.html  binary__literal_8h.html  buffer__ops_8c.html  buffer__ops_8h.html  decode_8c.html  decode_8h.html  dir_44b2d8d24a35d5791b4d8e75a1fd217b.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_572fdd7c42026676c3defcdf04ef0b3a.html  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.html  dir_cdd2d351dd567b764cb91bcd34aecba9.html  dir_ef3b2545113449f8f25e623a543d64e3.html  error_8h.html  files.html  gif__engine_8c.html  gif__engine_8h.html  index.html  last__position_8c.html  last__position_8h.html  modules.html  namespaces.html  pages.html  parse_8c.html  parse_8h.html  parse__state_8h.html  result__code_8h.html  searchdata-v1.js  structgif__decode__result.html  structgif__descriptor.html  structgif__descriptor__packed.html  (+14 more)
.github/: pull_request_template.md
.github/workflows/: ci.yml  docs.yml
cmake/: coverage.cmake  dev-mode.cmake  functions.cmake  install-config.cmake  install-rules.cmake  lint-targets.cmake  lint.cmake  stringify-result-code.cmake  variables.cmake
docs/: Doxyfile.in
fuzz/: CMakeLists.txt  CMakeLists.txt.in  append.cmake  corpus-download.sh  corpus-upload.sh  parser.c
include/gif_engine/: error.h  gif_engine.h  result_code.h  structs.h
ports/utest/: portfile.cmake  vcpkg.json
source/: binary_literal.h  buffer_ops.c  buffer_ops.h  decode.c  gif_engine.c  last_position.c  last_position.h  parse.c  parse.h  parse_state.h  try.h
source/decode/: decode.c  decode.h
source/parse/: parse.c  parse.h  parse_state.h
test/: CMakeLists.txt
test/source/: gif_engine_test.c  gif_mmap.h  gif_mmap.nt.c  gif_mmap.posix.c
